--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -1,5 +1,5 @@
 {
-  "boilerplate.components.Footer.author.message": "Hecho por IKABO Team",
+  "boilerplate.components.Footer.author.message": "Hecho con cariño por {author}",
   "boilerplate.components.Footer.license.message": "Este proyecto se encuentra bajo licencia MIT.",
   "boilerplate.components.Header.features": "Features",
   "boilerplate.components.Header.home": "Home",
@@ -28,5 +28,6 @@
   "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
   "boilerplate.containers.LocaleToggle.de": "de",
   "boilerplate.containers.LocaleToggle.en": "en",
-  "boilerplate.containers.NotFoundPage.header": "Page not found."
+  "boilerplate.containers.NotFoundPage.header": "Page not found.",
+  "boilerplate.containers.app.menu.title": "Este es el menú"
 }
