--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -20,13 +20,14 @@
   "boilerplate.containers.FeaturePage.scaffolding.message": "Automate the creation of components, containers, routes, selectors\n  and sagas - and their tests - right from the CLI!",
   "boilerplate.containers.FeaturePage.state_management.header": "Predictable state management",
   "boilerplate.containers.FeaturePage.state_management.message": "Unidirectional data flow allows for change logging and time travel\n    debugging.",
-  "boilerplate.containers.HomePage.start_project.header": "Start your next react project in seconds",
-  "boilerplate.containers.HomePage.start_project.message": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "boilerplate.containers.HomePage.start_project.header": "Welcome to the Ikabo Project, a framework for developing UI applications powered by Valo",
+  "boilerplate.containers.HomePage.start_project.message": "A highly scalable, offline-first, themeable, with focus on performance, internationalization and best practices",
   "boilerplate.containers.HomePage.tryme.atPrefix": "@",
   "boilerplate.containers.HomePage.tryme.header": "Try me!",
   "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
   "boilerplate.containers.LocaleToggle.de": "de",
-  "boilerplate.containers.LocaleToggle.en": "en",
+  "boilerplate.containers.LocaleToggle.en": "english",
+  "boilerplate.containers.LocaleToggle.es": "spanish",
   "boilerplate.containers.NotFoundPage.header": "Page not found.",
   "boilerplate.containers.app.menu.title": "This is the menu"
 }
