--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -21,13 +21,14 @@
   "boilerplate.containers.FeaturePage.scaffolding.message": "Automate the creation of components, containers, routes, selectors\n  and sagas - and their tests - right from the CLI!",
   "boilerplate.containers.FeaturePage.state_management.header": "Predictable state management",
   "boilerplate.containers.FeaturePage.state_management.message": "Unidirectional data flow allows for change logging and time travel\n    debugging.",
-  "boilerplate.containers.HomePage.start_project.header": "Start your next react project in seconds",
-  "boilerplate.containers.HomePage.start_project.message": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "boilerplate.containers.HomePage.start_project.header": "Bienvenid@ a ikabo, el framework para desarrollar aplicaciones gráficas basadas en Valo",
+  "boilerplate.containers.HomePage.start_project.message": "Con un enfoque en escalabilidad, eficiencia, personalizacion, internacionalizacion y buenas prácticas.",
   "boilerplate.containers.HomePage.tryme.atPrefix": "@",
   "boilerplate.containers.HomePage.tryme.header": "Try me!",
   "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
   "boilerplate.containers.LocaleToggle.de": "de",
-  "boilerplate.containers.LocaleToggle.en": "en",
+  "boilerplate.containers.LocaleToggle.en": "ingles",
+  "boilerplate.containers.LocaleToggle.es": "español",
   "boilerplate.containers.NotFoundPage.header": "Page not found.",
   "boilerplate.containers.app.menu.title": "Este es el menú"
 }
