--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -20,8 +20,8 @@
   "boilerplate.containers.FeaturePage.scaffolding.message": "Automate the creation of components, containers, routes, selectors\n  and sagas - and their tests - right from the CLI!",
   "boilerplate.containers.FeaturePage.state_management.header": "Predictable state management",
   "boilerplate.containers.FeaturePage.state_management.message": "Unidirectional data flow allows for change logging and time travel\n    debugging.",
-  "boilerplate.containers.HomePage.start_project.header": "Welcome to the Ikabo Project, a framework for developing UI applications powered by Valo",
-  "boilerplate.containers.HomePage.start_project.message": "A highly scalable, offline-first, themeable, with focus on performance, internationalization and best practices",
+  "boilerplate.containers.HomePage.start_project.header": "Welcome to the Ikabo Project, a powered by Valo UI framework",
+  "boilerplate.containers.HomePage.start_project.message": "A highly scalable, themeable, with focus on performance, internationalization and best practices",
   "boilerplate.containers.HomePage.tryme.atPrefix": "@",
   "boilerplate.containers.HomePage.tryme.header": "Try me!",
   "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
