--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -22,7 +22,7 @@
   "boilerplate.containers.FeaturePage.state_management.header": "Predictable state management",
   "boilerplate.containers.FeaturePage.state_management.message": "Unidirectional data flow allows for change logging and time travel\n    debugging.",
   "boilerplate.containers.HomePage.start_project.header": "Bienvenid@ a ikabo, el framework para desarrollar aplicaciones gráficas basadas en Valo",
-  "boilerplate.containers.HomePage.start_project.message": "Con un enfoque en escalabilidad, eficiencia, personalizacion, internacionalizacion y buenas prácticas.",
+  "boilerplate.containers.HomePage.start_project.message": "Con un enfoque en escalabilidad, eficiencia, personalización, internacionalización y buenas prácticas.",
   "boilerplate.containers.HomePage.tryme.atPrefix": "@",
   "boilerplate.containers.HomePage.tryme.header": "Try me!",
   "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
